modify examples and loop variables
Signed-off-by: Yang Keao <keao.yang@yahoo.com>

--- a/examples/network-delay.yaml
+++ b/examples/network-delay.yaml
@@ -8,7 +8,9 @@ spec:
   mode: one
   selector:
     namespaces:
-      - default
+      - tidb-cluster-demo
+    labelSelectors:
+      "app.kubernetes.io/component": "tikv"
   delay:
     latency: "90ms"
     correlation: "0.25"
