update helm files
Signed-off-by: cwen0 <cwenyin0@gmail.com>

--- a/helm/chaos-operator/templates/chaos-daemon-deployment.yaml
+++ b/helm/chaos-operator/templates/chaos-daemon-deployment.yaml
@@ -41,7 +41,7 @@ spec:
                 - SYS_ADMIN
           volumeMounts:
             - name: proc
-              mountPath: /mnt/proc
+              mountPath: /proc
             - name: dockersock
               mountPath: /var/run/docker.sock
           ports:
