--- a/examples/network-partition-example.yaml
+++ b/examples/network-partition-example.yaml
@@ -4,7 +4,7 @@ metadata:
   name: network-delay-example
   namespace: chaos-testing
 spec:
-  action: delay
+  action: partition
   mode: one
   selector:
     namespaces:
