fix delete chaos object (#22)

--- a/helm/chaos-operator/templates/chaos-daemon-deployment.yaml
+++ b/helm/chaos-operator/templates/chaos-daemon-deployment.yaml
@@ -35,10 +35,7 @@ spec:
             - name: PORT
               value: !!str {{ .Values.chaosDaemon.port }}
           securityContext:
-            capabilities:
-              add:
-                - NET_ADMIN
-                - SYS_ADMIN
+            privileged: true
           volumeMounts:
             - name: proc
               mountPath: /mnt/proc
