--- a/examples/pod-kill-example.yaml
+++ b/examples/pod-kill-example.yaml
@@ -8,7 +8,7 @@ spec:
   mode: one
   selector:
     namespaces:
-      - demo
+      - tidb-cluster-demo
     labelSelectors:
       "app.kubernetes.io/component": "tikv"
   scheduler:
