--- a/config/crd/bases/pingcap.com_iochaos.yaml
+++ b/config/crd/bases/pingcap.com_iochaos.yaml
@@ -4,7 +4,7 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.2.2
+    controller-gen.kubebuilder.io/version: v0.2.4
   creationTimestamp: null
   name: iochaos.pingcap.com
 spec:
@@ -14,7 +14,7 @@ spec:
     listKind: IoChaosList
     plural: iochaos
     singular: iochaos
-  scope: ""
+  scope: Namespaced
   validation:
     openAPIV3Schema:
       description: IoChaos is the Schema for the iochaos API
