--- a/config/crd/bases/pingcap.com_networkchaos.yaml
+++ b/config/crd/bases/pingcap.com_networkchaos.yaml
@@ -4,7 +4,7 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.2.2
+    controller-gen.kubebuilder.io/version: v0.2.4
   creationTimestamp: null
   name: networkchaos.pingcap.com
 spec:
@@ -14,7 +14,7 @@ spec:
     listKind: NetworkChaosList
     plural: networkchaos
     singular: networkchaos
-  scope: ""
+  scope: Namespaced
   validation:
     openAPIV3Schema:
       description: NetworkChaos is the Schema for the networkchaos API
