--- a/config/crd/bases/pingcap.com_podchaos.yaml
+++ b/config/crd/bases/pingcap.com_podchaos.yaml
@@ -4,7 +4,7 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.2.2
+    controller-gen.kubebuilder.io/version: v0.2.4
   creationTimestamp: null
   name: podchaos.pingcap.com
 spec:
@@ -14,7 +14,7 @@ spec:
     listKind: PodChaosList
     plural: podchaos
     singular: podchaos
-  scope: ""
+  scope: Namespaced
   validation:
     openAPIV3Schema:
       description: PodChaos is the control script`s spec.
