--- a/manifests/crd.yaml
+++ b/manifests/crd.yaml
@@ -2,7 +2,7 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.2.2
+    controller-gen.kubebuilder.io/version: v0.2.4
   creationTimestamp: null
   name: iochaos.pingcap.com
 spec:
@@ -12,7 +12,7 @@ spec:
     listKind: IoChaosList
     plural: iochaos
     singular: iochaos
-  scope: ""
+  scope: Namespaced
   validation:
     openAPIV3Schema:
       description: IoChaos is the Schema for the iochaos API
@@ -245,7 +245,7 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.2.2
+    controller-gen.kubebuilder.io/version: v0.2.4
   creationTimestamp: null
   name: networkchaos.pingcap.com
 spec:
@@ -255,7 +255,7 @@ spec:
     listKind: NetworkChaosList
     plural: networkchaos
     singular: networkchaos
-  scope: ""
+  scope: Namespaced
   validation:
     openAPIV3Schema:
       description: NetworkChaos is the Schema for the networkchaos API
@@ -532,7 +532,7 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.2.2
+    controller-gen.kubebuilder.io/version: v0.2.4
   creationTimestamp: null
   name: podchaos.pingcap.com
 spec:
@@ -542,7 +542,7 @@ spec:
     listKind: PodChaosList
     plural: podchaos
     singular: podchaos
-  scope: ""
+  scope: Namespaced
   validation:
     openAPIV3Schema:
       description: PodChaos is the control script`s spec.
