add more netem networkchaos
Signed-off-by: Yang Keao <keao.yang@yahoo.com>

--- a/manifests/crd.yaml
+++ b/manifests/crd.yaml
@@ -20,12 +20,12 @@ spec:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation
             of an object. Servers should convert recognized schemas to the latest
-            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources'
+            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
           type: string
         kind:
           description: 'Kind is a string value representing the REST resource this
             object represents. Servers may infer this from the endpoint the client
-            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds'
+            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
           type: string
         metadata:
           type: object
@@ -263,12 +263,12 @@ spec:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation
             of an object. Servers should convert recognized schemas to the latest
-            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources'
+            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
           type: string
         kind:
           description: 'Kind is a string value representing the REST resource this
             object represents. Servers may infer this from the endpoint the client
-            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds'
+            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
           type: string
         metadata:
           type: object
@@ -279,6 +279,17 @@ spec:
               description: 'Action defines the specific network chaos action. Supported
                 action: delay Default action: delay'
               type: string
+            corrupt:
+              description: Corrupt represents the detail about loss action
+              properties:
+                correlation:
+                  type: string
+                corrupt:
+                  type: string
+              required:
+              - correlation
+              - corrupt
+              type: object
             delay:
               description: Delay represents the detail about delay action
               properties:
@@ -296,9 +307,31 @@ spec:
             direction:
               description: Direction represents the partition direction
               type: string
+            duplicate:
+              description: DuplicateSpec represents the detail about loss action
+              properties:
+                correlation:
+                  type: string
+                duplicate:
+                  type: string
+              required:
+              - correlation
+              - duplicate
+              type: object
             duration:
               description: Duration represents the duration of the chaos action
               type: string
+            loss:
+              description: Loss represents the detail about loss action
+              properties:
+                correlation:
+                  type: string
+                loss:
+                  type: string
+              required:
+              - correlation
+              - loss
+              type: object
             mode:
               description: 'Mode defines the mode to run chaos action. Supported mode:
                 one / all / fixed / fixed-percent / random-max-percent'
@@ -550,12 +583,12 @@ spec:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation
             of an object. Servers should convert recognized schemas to the latest
-            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources'
+            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
           type: string
         kind:
           description: 'Kind is a string value representing the REST resource this
             object represents. Servers may infer this from the endpoint the client
-            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds'
+            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
           type: string
         metadata:
           type: object
