--- a/helm/chaos-operator/values.yaml
+++ b/helm/chaos-operator/values.yaml
@@ -16,7 +16,7 @@ controllerManager:
   replicaCount: 1
 
   image: pingcap/chaos-operator:latest
-  imagePullPolicy: Always
+#  imagePullPolicy: Always
 
   nameOverride: ""
   fullnameOverride: ""
@@ -43,7 +43,34 @@ controllerManager:
 
   affinity: {}
 
+collector:
+  image: pingcap/chaos-collector:latest
+#  imagePullPolicy: Always
+
+
+  nodeSelector: {}
+
+  tolerations: []
+
+  affinity: {}
+
+  resources:
+    # We usually recommend not to specify default resources and to leave this as a conscious
+    # choice for the user. This also increases chances charts run on environments with little
+    # resources, such as Minikube. If you do want to specify resources, uncomment the following
+    # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
+    limits:
+      cpu: 500m
+      memory: 1024Mi
+    requests:
+      cpu: 250m
+      memory: 512Mi
+
+  volume:
+    storage: 3Gi
+    storageClassName: default
+
 chaosDaemon:
   image: pingcap/chaos-daemon:latest
-  imagePullPolicy: Always
+#  imagePullPolicy: Always
   port: 31767
