--- a/manifests/crd.yaml
+++ b/manifests/crd.yaml
@@ -279,6 +279,17 @@ spec:
               description: 'Action defines the specific network chaos action. Supported
                 action: delay Default action: delay'
               type: string
+            corrupt:
+              description: Corrupt represents the detail about loss action
+              properties:
+                correlation:
+                  type: string
+                corrupt:
+                  type: string
+              required:
+              - correlation
+              - corrupt
+              type: object
             delay:
               description: Delay represents the detail about delay action
               properties:
@@ -296,9 +307,31 @@ spec:
             direction:
               description: Direction represents the partition direction
               type: string
+            duplicate:
+              description: DuplicateSpec represents the detail about loss action
+              properties:
+                correlation:
+                  type: string
+                duplicate:
+                  type: string
+              required:
+              - correlation
+              - duplicate
+              type: object
             duration:
               description: Duration represents the duration of the chaos action
               type: string
+            loss:
+              description: Loss represents the detail about loss action
+              properties:
+                correlation:
+                  type: string
+                loss:
+                  type: string
+              required:
+              - correlation
+              - loss
+              type: object
             mode:
               description: 'Mode defines the mode to run chaos action. Supported mode:
                 one / all / fixed / fixed-percent / random-max-percent'
