chaos-operator renamed to chaos-mesh
Signed-off-by: cwen0 <cwenyin0@gmail.com>

--- a/config/samples/chaosoperator_v1alpha1_iochaos.yaml
+++ b/config/samples/chaosoperator_v1alpha1_iochaos.yaml
@@ -1,4 +1,4 @@
-apiVersion: chaosoperator.pingcap.com/v1alpha1
+apiVersion: chaosmesh.pingcap.com/v1alpha1
 kind: IoChaos
 metadata:
   name: iochaos-sample
