--- a/config/crd/patches/cainjection_in_iochaos.yaml
+++ b/config/crd/patches/cainjection_in_iochaos.yaml
@@ -5,4 +5,4 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: $(CERTIFICATE_NAMESPACE)/$(CERTIFICATE_NAME)
-  name: iochaos.chaosoperator.pingcap.com
+  name: iochaos.chaosmesh.pingcap.com
