--- a/config/crd/patches/webhook_in_iochaos.yaml
+++ b/config/crd/patches/webhook_in_iochaos.yaml
@@ -3,7 +3,7 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: iochaos.chaosoperator.pingcap.com
+  name: iochaos.chaosmesh.pingcap.com
 spec:
   conversion:
     strategy: Webhook
