--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -7,7 +7,7 @@ metadata:
   name: manager-role
 rules:
 - apiGroups:
-  - chaosoperator.pingcap.com
+  - chaosmesh.pingcap.com
   resources:
   - iochaos
   verbs:
@@ -19,7 +19,7 @@ rules:
   - update
   - watch
 - apiGroups:
-  - chaosoperator.pingcap.com
+  - chaosmesh.pingcap.com
   resources:
   - iochaos/status
   verbs:
