add example for network loss/corrupt/duplicate
Signed-off-by: Yang Keao <keao.yang@yahoo.com>

--- a/examples/network-corrupt-example.yaml
+++ b/examples/network-corrupt-example.yaml
@@ -1,20 +1,19 @@
 apiVersion: pingcap.com/v1alpha1
 kind: NetworkChaos
 metadata:
-  name: network-delay-example
+  name: network-corrupt-example
   namespace: chaos-testing
 spec:
-  action: delay
+  action: corrupt
   mode: one
   selector:
     namespaces:
       - tidb-cluster-demo
     labelSelectors:
       "app.kubernetes.io/component": "tikv"
-  delay:
-    latency: "90ms"
+  corrupt:
+    corrupt: "40"
     correlation: "25"
-    jitter: "90ms"
   duration: "10s"
   scheduler:
     cron: "@every 15s"
