--- a/examples/network-loss-example.yaml
+++ b/examples/network-loss-example.yaml
@@ -1,20 +1,19 @@
 apiVersion: pingcap.com/v1alpha1
 kind: NetworkChaos
 metadata:
-  name: network-delay-example
+  name: network-loss-example
   namespace: chaos-testing
 spec:
-  action: delay
+  action: loss
   mode: one
   selector:
     namespaces:
       - tidb-cluster-demo
     labelSelectors:
       "app.kubernetes.io/component": "tikv"
-  delay:
-    latency: "90ms"
+  loss:
+    loss: "25"
     correlation: "25"
-    jitter: "90ms"
   duration: "10s"
   scheduler:
     cron: "@every 15s"
