update configmap examples
Signed-off-by: cwen0 <cwenyin0@gmail.com>

--- a/examples/chaosfs-configmap/tikv-configmap.yaml
+++ b/examples/chaosfs-configmap/tikv-configmap.yaml
@@ -8,6 +8,9 @@ metadata:
 data:
   chaosfs-tikv.yaml: |
     name: chaosfs-tikv
+    selector:
+      labelSelectors:
+        "app.kubernetes.io/component": "tikv"
     initContainers:
     - name: inject-scripts
       image: pingcap/chaos-scripts:latest
