--- a/examples/chaosfs-configmap/pd-configmap.yaml
+++ b/examples/chaosfs-configmap/pd-configmap.yaml
@@ -8,6 +8,9 @@ metadata:
 data:
   chaosfs-pd.yaml: |
     name: chaosfs-pd
+    selector:
+      labelSelectors:
+        "app.kubernetes.io/component": "pd"
     initContainers:
     - name: inject-scripts
       image: pingcap/chaos-scripts:latest
