add sidecar ConfigMap document and update IOChaos document
Signed-off-by: cwen0 <cwenyin0@gmail.com>

--- a/examples/chaosfs-configmap/etcd-configmap.yaml
+++ b/examples/chaosfs-configmap/etcd-configmap.yaml
@@ -45,6 +45,6 @@ data:
     - name: fuse
       emptyDir: {}
     postStart:
-      pd:
+      etcd:
         command:
           - /tmp/scripts/wait-fuse.sh
