--- a/examples/chaosfs-configmap/tikv-configmap.yaml
+++ b/examples/chaosfs-configmap/tikv-configmap.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: chaosfs-tikv
+  namespace: chaos-testing
   labels:
     app.kubernetes.io/component: webhook
 data:
