--- a/images/chaos-scripts/Dockerfile
+++ b/images/chaos-scripts/Dockerfile
@@ -2,4 +2,5 @@ FROM alpine:3.5
 
 RUN apk add tzdata --no-cache
 RUN mkdir -p /scripts
-ADD hack/wait-fuse.sh /scripts/wait-fuse.sh
+ADD scripts/wait-fuse.sh /scripts/wait-fuse.sh
+ADD scripts/init.sh /scripts/init.sh
