--- a/helm/chaos-mesh/values.yaml
+++ b/helm/chaos-mesh/values.yaml
@@ -15,7 +15,7 @@ controllerManager:
 
   replicaCount: 1
 
-  image: pingcap/chaos-mesh:latest
+  image: registry.tnthub.com/pingcap/chaos-mesh:latest
   imagePullPolicy: Always
 
   nameOverride: ""
@@ -44,7 +44,7 @@ controllerManager:
   affinity: {}
 
 chaosDaemon:
-  image: pingcap/chaos-daemon:latest
+  image: registry.tnthub.com/pingcap/chaos-daemon:latest
   imagePullPolicy: Always
   port: 31767
 
@@ -60,12 +60,18 @@ chaosDaemon:
   # runtime: containerd
   # socketPath: /run/containerd/containerd.sock
 
+
+timeChaos:
+  image: registry.tnthub.com/time-chaos:latest
+  imagePullPolicy: Always
+  port: 50051
+
 dashboard:
   create: false
 
   serviceAccount: chaos-dashboard
 
-  image: pingcap/chaos-dashboard:latest
+  image: registry.tnthub.com/pingcap/chaos-dashboard:latest
   imagePullPolicy: Always
 
   nodeSelector: {}
